# hashsigs-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  SECURITY.md  TODO.md  build.rs  rust-toolchain.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.cargo/: audit.toml
.github/: dependabot.yml
docs/: hashsig-rs.md  solidity-parity.md
examples/: bench_keygen_sign.rs  measure_mem.rs
solana/: Cargo.toml
solana/src/: account.rs  lib.rs  processor.rs  sphincs_plus_c.rs
solana/tests/: shrincs_account_tests.rs  solana_unit_tests.rs
src/: buf.rs  envelope.rs  fors_c.rs  hash.rs  hash_backend.rs  hypertree.rs  lib.rs  shrincs_fors_c.rs  shrincs_hypertree.rs  shrincs_signer.rs  shrincs_signer_fors_c.rs  shrincs_signer_hypertree.rs  shrincs_signer_stateful.rs  shrincs_signer_types.rs  shrincs_signer_utils.rs  shrincs_stateful.rs  shrincs_types.rs  shrincs_utils.rs  shrincs_verifier.rs  shrincs_verifier_fors_c.rs  shrincs_verifier_hypertree.rs  shrincs_verifier_stateful.rs  signer.rs  sphincs_plus_c.rs  sphincs_plus_c_verifier.rs  test_support.rs  trace_macros.rs  treehash.rs  types.rs  uxmss.rs  verifier.rs  wotsplusc.rs
src/account/: mod.rs
src/hash_suite/: keccak.rs  mod.rs  sha2.rs
src/primitives/: hash.rs  hash_backend.rs  mod.rs  treehash.rs  wotsplusc.rs
src/primitives/hash_suite/: keccak.rs  mod.rs  sha2.rs
src/shrincs/: dispatch.rs  envelope.rs  erc7913.rs  fors_c.rs  generic_verifier.rs  hash.rs  hash_suite.rs  hypertree.rs  keys.rs  messages.rs  mod.rs  profiles.rs  public_key.rs  shrincs_common.rs  shrincs_signer_compact.rs  shrincs_signer_fors_c.rs  shrincs_signer_hypertree.rs  shrincs_signer_stateful.rs  shrincs_signer_types.rs  shrincs_signer_utils.rs  shrincs_verifier_fors_c.rs  shrincs_verifier_hypertree.rs  shrincs_verifier_stateful.rs  shrincs_verifier_types.rs  shrincs_verifier_utils.rs  signer.rs  signer_types.rs  signer_utils.rs  test_fixtures.rs  treehash.rs  types.rs  uxmss.rs  vector_conformance.rs  verifier.rs  wotsplusc.rs
src/shrincs/components/: fors_c.rs  hash.rs  hypertree.rs  mod.rs  public_key.rs  uxmss.rs
src/shrincs/core/: messages.rs  mod.rs  shrincs.rs  sphincs_plus_c.rs
src/shrincs/hash_suite/: keccak.rs  sha2.rs
src/shrincs/signers/: fors_c.rs  hypertree.rs  mod.rs  shrincs_signer.rs  types.rs  utils.rs  uxmss.rs
src/shrincs/verifiers/: mod.rs  shrincs_verifier.rs  sphincs_plus_c_verifier.rs
src/sphincs_plus_c/: fors_c.rs  hypertree.rs  key.rs  mod.rs  verifier.rs
src/wasm/: mod.rs
src/wotsplus/: mod.rs
tests/: alloc_budget.rs  envelope_vectors.rs  generate_shrincs_e2e_vectors.rs  generate_shrincs_paymaster_vectors.rs  generate_shrincs_vectors.rs  generate_shrincs_wallet_vectors.rs  generate_stateful_gas_vector.rs  solidity_account_vectors.rs  test_vectors.rs
tests/common/: mod.rs
tests/test_fixtures/: account_keys.json  account_keys.shrincs-256s-keccak.json  account_keys.shrincs-256s-sha2.json  account_signature_cases.json  account_signature_cases.shrincs-256s-sha2.json  stateful_signer_keys.shrincs-128s-q18-keccak.json  stateful_signer_keys.shrincs-128s-q20-keccak.json
tests/test_vectors/: shrincs_account_wrapper_vectors.json  shrincs_e2e_sphincs_256s_keccak.json  shrincs_paymaster_sphincs_256s_keccak.json  shrincs_sphincs_128s_q18_keccak.json  shrincs_sphincs_128s_q20_keccak.json  shrincs_sphincs_256s_keccak.json  shrincs_sphincs_256s_sha2.json  shrincs_stateful_k_gas_vector.json  shrincs_wallet_sphincs_256s_keccak.json
ts/: package-lock.json  package.json  tsconfig.json
ts/scripts/: copy-wasm.js  gen-wasm-inline.mjs  sync-version.mjs
ts/src/: index.ts  loader.browser.ts  loader.node.ts
ts/test/: conformance.test.mjs
