[package]
name = "hashsigs-rs"
version = "0.2.0-rc.2"
edition = "2021"
authors = ["Richard T. Carback III <rick.rust.cargo.383d5@passmail.net>"]
description = "Hash-based signatures core library with WOTS+ and SHRINCS primitives"
license = "AGPL-3.0-or-later"
repository = "https://github.com/quipnetwork/hashsigs-rs"
documentation = "https://docs.rs/hashsigs-rs"
readme = "README.md"
keywords = ["cryptography", "wots", "shrincs", "signature", "solana"]
categories = ["cryptography", "authentication", "no-std"]
build = "build.rs"

[lib]
name = "hashsigs_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[workspace]
members = [
    "solana"
]
resolver = "2"

[features]
# Keep the default-profile selector internal so downstream additive feature use
# works as expected: `--features profile-128s-q18` should override the default
# 256s selection instead of conflicting with it.
default = ["std", "default-profile-256s"]
# Host/runtime surface: thiserror Error, serde std, env-based debug traces.
std = ["alloc", "serde/std", "thiserror/std"]
# Heap types (Vec/Box/String) used by signature wire types and pack helpers.
alloc = []
# Optional Solana program dependency + syscall hash routing (also auto-selected
# on target_os = "solana" via cfg in hash_backend).
solana = ["dep:solana-program"]
# Compile-time SHRINCS parameter-profile selection. These mirror the Solidity
# contracts/profiles/<profile>/SHRINCSParams.sol libraries selected by the
# Foundry `shrincs-profile/` remapping: one parameter tuple is chosen at
# build time, so counts stay compile-time constants (no runtime params
# struct). `profile-256s-sha2` switches the internal scheme-hash suite to
# SHA-256 while keeping EVM-domain hashes (profile identity, commitments,
# canonical action hashes) on keccak to match Solidity. Consumers may either:
# - rely on the default internal 256s selection
# - enable one explicit public profile feature
# Build selection logic lives in build.rs.
default-profile-256s = []
profile-256s = []
profile-128s-q18 = []
profile-128s-q20 = []
profile-256s-sha2 = []
wasm-bindings = [
    "std",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:tsify",
    "dep:js-sys",
]
# Parallelize grind searches, batched leaf generation, and WOTS-C chain
# endpoint computation with rayon. Off by default; never implied by any
# other feature (rayon pulls in a thread pool, unsuitable for wasm targets).
# Requires std: rayon has no no_std support.
parallel = ["std", "dep:rayon"]

[dependencies]
solana-program = { version = "2.3", optional = true }
# Portable hash backends (no_std-capable). Used when not on Solana / without
# the `solana` feature. Keep in lockstep with the build-dep sha3 major line.
sha3 = { version = "0.10", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
zeroize = { version = "1.8", default-features = false, features = ["derive"] }
rayon = { version = "1.12", optional = true }
# =0.5.5: last tsify accepting wasm-bindgen 0.2.100, which the wasm-bindgen CLI
# pin in bin/build-wasm.sh must match exactly (0.5.6 forces ^0.2.104).
tsify = { version = "=0.5.5", default-features = false, features = ["js"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }

[dev-dependencies]
flate2 = "1.1.2"
serde_json = "1.0.143"
wasm-bindgen-test = "0.3.50"
# Independent oracle for the portable sha3/sha2 hash backend: golden-vector
# generators hash the same inputs via solana-program directly and assert
# byte-identical output against hash_backend's default (non-`solana`-feature)
# sha3/sha2 path. Dev-only — never ships in the published library artifact.
solana-program = "2.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.11.0"

[build-dependencies]
sha3 = "0.10"

# Opt-level 2 for tests: hash-tree-heavy debug (opt-level 0) is the root cause of
# 128s profile slowness (>25 min without finishing a test). Keep default
# debug-assertions and overflow-checks (on) so test builds still catch bugs.
[profile.test]
opt-level = 2
