[package]
name = "hashsigs-rs-solana"
version = "0.0.1"
edition = "2021"
authors = ["Richard T. Carback III <rick.carback@gmail.com>"]
description = "Solana program for WOTS+"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.3"
hashsigs-rs = { path = ".." }
borsh = "1.5"
bytemuck = "1.13"
bytemuck_derive = "1.10.1"  # Updated to satisfy Solana 2.3

[dev-dependencies]
solana-program-test = "2.3"
solana-sdk = "2.3"
tokio = { version = "1.47", features = ["full"] }
