[package]
name = "hashsigs-rs-solana"
version = "0.0.1"
edition = "2021"
authors = ["Richard T. Carback III <rick.carback@gmail.com>"]
description = "Solana program for WOTS+"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
# Replaces the entrypoint's default 32 KiB-bounded bump allocator with an
# unbounded one so ComputeBudgetInstruction::request_heap_frame actually
# extends usable heap (the VM enforces the granted frame size).
custom-heap = []
default = ["custom-heap"]

[dependencies]
solana-program = "2.3"
hashsigs-rs = { path = "..", features = ["solana"] }
borsh = "1.5.7"
bytemuck = "1.23"
bytemuck_derive = "1.10.1"  # Updated to satisfy Solana 2.3
solana-system-interface = "2.0"

[dev-dependencies]
solana-program-test = "2.3"
solana-sdk = "2.3"
tokio = { version = "1.47.1", features = ["full"] }
